<resources>
    <string name="app_name">Pichangas</string>
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="iniciar">Iniciar</string>
    <string name="registrar">Registrar</string>
    <string name="registroUser">Registro de Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="age">Edad</string>
    <string name="bienvenido">Bienvenido!</string>
    <string name="nombreUser">Nombre:</string>
    <string name="edadUser">Edad:</string>
    <string name="usuarioUser">Usuario:</string>
    <string name="passUser">Contraseña:</string>
    <string name="pass_confirmation">Confirme ontraseña:</string>
    <string name="correoUser">Correo:</string>
    <string name="old_pass">Contraseña actual</string>
    <string name="new_pass">Nueva contraseña</string>
    <string name="new_pass_confirmation">Confirmar contraseña</string>
    <string name="perfil_update">Actualizar datos</string>

    <string name="pichangas">Pichangas</string>
    <string name="amigos">Amigos</string>
    <string name="invitaciones">Invitaciones</string>
    <string name="estadisticas">Estadísticas</string>

    <string name="returnDescription">Volver al menú principal</string>
    <string name="userDescription">Ver mi perfil</string>
    <string name="nuevaPichanga">Nueva Pichanga</string>
    <string name="description">Descripción</string>
    <string name="addPichanga">Crear Pichanga</string>

    <string name="place">Lugar</string>
    <string name="date">Fecha</string>
    <string name="year">Año</string>
    <string name="month">Mes</string>
    <string name="day">Día</string>
    <string name="time">Hora</string>
    <string name="minute">Minuto</string>
    <string name="inviteFriend">Invitar amigo</string>
    <string name="uninvite">X</string>

    <string name="newFriend">Nuevo amigo</string>
    <string name="addFriend">Añadir amigo</string>
    <string name="acceptFriend">Agregar como amigo</string>
</resources>
