<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registro"
    android:background="@color/colorFondo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/nuevaPichanga"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textColor="#000000"
        />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/nombre"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        />

    <EditText
        android:id="@+id/lugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/place"
        android:inputType="text"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".Registro"
        android:background="@color/colorFondo">
        <EditText
            android:id="@+id/ano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/year"
            android:inputType="number"
            android:layout_marginStart="48dp"
            />
        <EditText
            android:id="@+id/mes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/month"
            android:inputType="number"
            android:layout_marginStart="48dp"
            />
        <EditText
            android:id="@+id/dia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/day"
            android:inputType="number"
            android:layout_marginStart="48dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".Registro">

        <EditText
            android:id="@+id/hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/time"
            android:inputType="number"
            android:layout_marginStart="72dp"
            />
        <EditText
            android:id="@+id/minuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/minute"
            android:inputType="number"
            android:layout_marginStart="72dp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/addPichanga"
        android:layout_gravity="center"
        android:textColor="@color/colorBlanco"
        android:background="@drawable/secondary_button"
        />

</LinearLayout>