<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/aaa"
    tools:context=".MainActivity">


    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="241dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:src="@drawable/logoo" />

    <EditText
        android:id="@+id/txt_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="@string/user"
        android:background="@color/colorBlanco"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/txt_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:background="@color/colorBlanco"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/btn_iniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/iniciar"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/txt_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:background="@color/colorBlanco"
        android:layout_gravity="center"
        />

</LinearLayout>