<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorFondo"
    tools:context=".MenuActivity">

    <LinearLayout
        android:id="@+id/layout_pichangas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="@string/newFriend"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textColor="#000000"
            />

        <EditText
            android:id="@+id/correo"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_gravity="center"
            android:background="@drawable/third_button"
            android:textColor="@color/colorBlanco"
            android:hint="@string/correoUser"
            />

        <Button
            android:id="@+id/new_friend_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/addFriend"
            android:textColor="@color/colorBlanco"
            android:background="@drawable/secondary_button"
            android:padding="10dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            />
    </LinearLayout>

</RelativeLayout>